# uipath-llm-client-python

./: .env.example  CHANGELOG.md  CODEOWNERS  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: cd-langchain.yml  cd.yml  ci.yml  ci_change_version.yml  ci_run_tests.yml  ci_type_check.yml  claude.yml  codeql.yml  publish-dev.yml
src/uipath_llm_client/: __init__.py  __version__.py  httpx_client.py
tests/: conftest.py  sqlite_persister.py
tests/cassettes/: TestFactoryFunction.test_get_chat_model[anthropic.claude-haiku-4-5-20251001-v1-0].yaml  TestFactoryFunction.test_get_chat_model[anthropic.claude-opus-4-5-20251101-v1-0].yaml  TestFactoryFunction.test_get_chat_model[anthropic.claude-sonnet-4-5-20250929-v1-0].yaml  TestFactoryFunction.test_get_chat_model[claude-haiku-4-5@20251001].yaml  TestFactoryFunction.test_get_chat_model[claude-opus-4-5@20251101].yaml  TestFactoryFunction.test_get_chat_model[claude-sonnet-4-5@20250929].yaml  TestFactoryFunction.test_get_chat_model[gemini-2.5-flash].yaml  TestFactoryFunction.test_get_chat_model[gemini-2.5-pro].yaml  TestFactoryFunction.test_get_chat_model[gemini-3-flash-preview].yaml  TestFactoryFunction.test_get_chat_model[gemini-3-pro-preview].yaml  TestFactoryFunction.test_get_chat_model[gpt-4.1-2025-04-14].yaml  TestFactoryFunction.test_get_chat_model[gpt-4o-2024-11-20].yaml  TestFactoryFunction.test_get_chat_model[gpt-5-2025-08-07].yaml  TestFactoryFunction.test_get_chat_model[gpt-5.1-2025-11-13].yaml  TestFactoryFunction.test_get_chat_model[gpt-5.2-2025-12-11].yaml  TestFactoryFunction.test_get_embedding_model[gemini-embedding-001].yaml  TestFactoryFunction.test_get_embedding_model[text-embedding-3-large].yaml  TestIntegrationChatModel.test_abatch[anthropic.claude-haiku-4-5-20251001-v1-0_UiPathChatAnthropic_{-vendor_type-- -awsbedrock-}-llmgw].yaml  TestIntegrationChatModel.test_abatch[anthropic.claude-haiku-4-5-20251001-v1-0_UiPathChatBedrockConverse_{}-llmgw].yaml  TestIntegrationChatModel.test_abatch[anthropic.claude-haiku-4-5-20251001-v1-0_UiPathChatBedrock_{-max_tokens-- 2048, -thinking-- {-type-- -enabled-, -budget_tokens-- 1024}}-llmgw].yaml  (+979 more)
(+137 files in other folders)
