[project]
name = "uipath-llm-client"
dynamic = ["version"]
description = "UiPath LLM Client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uipath>=2.10.13",
]

authors = [
    {name = "Cosmin Maria", email = "cosmin.maria@uipath.com"},
    {name = "Dragos Bobolea", email = "dragos.bobolea@uipath.com"},
]

[project.optional-dependencies]
openai = [
    "openai>=2.26.0",
]
google = [
    "google-genai>=1.67.0",
]
anthropic = [
    "anthropic>=0.84.0",
]
all = [
    "uipath-llm-client[openai,google,anthropic]",
]

[dependency-groups]
dev = [
    "langchain-tests>=1.1.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "pyright>=1.1.408",
    "ruff>=0.15.6",
    "uipath-llm-client[all]",
    "uipath_langchain_client[all]",
]

[tool.uv.workspace]
members = [
    "packages/uipath_langchain_client",
]

[tool.uv.sources]
uipath-llm-client = { workspace = true }
uipath-langchain-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uipath"]

[tool.hatch.version]
path = "src/uipath/llm_client/__version__.py"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["W", "I"]
fixable = ["ALL"]
ignore = [
  # whitespace before ':'
  # https://github.com/PyCQA/pycodestyle/issues/373
  "E203",
  # missing whitespace around parameter equals before ':'
  # anti-pattern of E251
  "E252",
  # Allow use of lambda expression assignments
  "E731",
  # Allow similar "I"/"l" variables
  "E741",
  # Ignore use of assert
  "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pyright]
reportImportCycles = true
